Compiler/Tasks/output/lab3Parser.java
// $ANTLR 3.4 C:\\Users\\zizoa\\Desktop\\Compiler\\Tasks\\lab3.g 2025-05-14 12:46:32

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class lab3Parser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ArithmaticOperators", "AssignmentAutoOperators", "AssignmentOperators", "CharValue", "Decl", "DoubleNum", "GeneralArithExpr", "ID", "IntNum", "LogicalOperators", "Operators", "SignedNumber", "StartgeneralArithExpr", "Stmt", "StringValue", "TrigonometricFunctions", "WS", "'&'", "'('", "')'", "'*'", "'+'", "','", "';'", "'<<'", "'='", "'String'", "'['", "']'", "'auto'", "'bool'", "'cerr'", "'char'", "'cin'", "'clog'", "'cout'", "'double'", "'else'", "'false'", "'float'", "'for'", "'if'", "'int'", "'new'", "'true'", "'while'", "'{'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int ArithmaticOperators=4;
    public static final int AssignmentAutoOperators=5;
    public static final int AssignmentOperators=6;
    public static final int CharValue=7;
    public static final int Decl=8;
    public static final int DoubleNum=9;
    public static final int GeneralArithExpr=10;
    public static final int ID=11;
    public static final int IntNum=12;
    public static final int LogicalOperators=13;
    public static final int Operators=14;
    public static final int SignedNumber=15;
    public static final int StartgeneralArithExpr=16;
    public static final int Stmt=17;
    public static final int StringValue=18;
    public static final int TrigonometricFunctions=19;
    public static final int WS=20;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public lab3Parser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public lab3Parser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return lab3Parser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\zizoa\\Desktop\\Compiler\\Tasks\\lab3.g"; }


    String s="";


    public static class run_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "run"
    // C:\\Users\\zizoa\\Desktop\\Compiler\\Tasks\\lab3.g:13:1: run : ( stmt | mathmaticalExpression );
    public final lab3Parser.run_return run() throws RecognitionException {
        lab3Parser.run_return retval = new lab3Parser.run_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        lab3Parser.stmt_return stmt1 =null;

        lab3Parser.mathmaticalExpression_return mathmaticalExpression2 =null;



        try {
            // C:\\Users\\zizoa\\Desktop\\Compiler\\Tasks\\lab3.g:13:6: ( stmt | mathmaticalExpression )
            int alt1=2;
            switch ( input.LA(1) ) {
            case AssignmentAutoOperators:
            case 30:
            case 33:
            case 34:
            case 35:
            case 36:
            case 37:
            case 38:
            case 39:
            case 40:
            case 43:
            case 44:
            case 45:
            case 46:
            case 49:
                {
                alt1=1;
                }
                break;
            case ID:
                {
                int LA1_2 = input.LA(2);

                if ( ((LA1_2 >= AssignmentAutoOperators && LA1_2 <= AssignmentOperators)||LA1_2==ID||LA1_2==24||LA1_2==29) ) {
                    alt1=1;
                }
                else if ( (LA1_2==EOF||LA1_2==Operators) ) {
                    alt1=2;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 1, 2, input);

                    throw nvae;

                }
                }
                break;
            case DoubleNum:
            case IntNum:
            case SignedNumber:
            case TrigonometricFunctions:
            case 22:
                {
                alt1=2;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;

            }

            switch (alt1) {
                case 1 :
                    // C:\\Users\\zizoa\\Desktop\\Compiler\\Tasks\\lab3.g:13:8: stmt
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_stmt_in_run41);
                    stmt1=stmt();

                    state._fsp--;

                    adaptor.addChild(root_0, stmt1.getTree());

                    }
                    break;
                case 2 :
                    // C:\\Users\\zizoa\\Desktop\\Compiler\\Tasks\\lab3.g:13:15: mathmaticalExpression
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_mathmaticalExpression_in_run45);
                    mathmaticalExpression2=mathmaticalExpression();

                    state._fsp--;

                    adaptor.addChild(root_0, mathmaticalExpression2.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "run"


    public static class stmt_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "stmt"
    // C:\\Users\\zizoa\\Desktop\\Compiler\\Tasks\\lab3.g:16:1: stmt : ( for_loop | if_stmt | decl | while_loop | assigningVariable | printings_statements );
    public final lab3Parser.stmt_return stmt() throws RecognitionException {
        lab3Parser.stmt_return retval = new lab3Parser.stmt_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        lab3Parser.for_loop_return for_loop3 =null;

        lab3Parser.if_stmt_return if_stmt4 =null;

        lab3Parser.decl_return decl5 =null;

        lab3Parser.while_loop_return while_loop6 =null;

        lab3Parser.assigningVariable_return assigningVariable7 =null;

        lab3Parser.printings_statements_return printings_statements8 =null;



        try {
            // C:\\Users\\zizoa\\Desktop\\Compiler\\Tasks\\lab3.g:16:6: ( for_loop | if_stmt | decl | while_loop | assigningVariable | printings_statements )
            int alt2=6;
            switch ( input.LA(1) ) {
            case 44:
                {
                alt2=1;
                }
                break;
            case 45:
                {
                alt2=2;
                }
                break;
            case 30:
            case 33:
            case 34:
            case 36:
            case 40:
            case 43:
            case 46:
                {
                alt2=3;
                }
                break;
            case ID:
                {
                int LA2_4 = input.LA(2);

                if ( (LA2_4==ID||LA2_4==24) ) {
                    alt2=3;
                }
                else if ( ((LA2_4 >= AssignmentAutoOperators && LA2_4 <= AssignmentOperators)||LA2_4==29) ) {
                    alt2=5;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 4, input);

                    throw nvae;

                }
                }
                break;
            case 49:
                {
                alt2=4;
                }
                break;
            case AssignmentAutoOperators:
                {
                alt2=5;
                }
                break;
            case 35:
            case 37:
            case 38:
            case 39:
                {
                alt2=6;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }

            switch (alt2) {
                case 1 :
                    // C:\\Users\\zizoa\\Desktop\\Compiler\\Tasks\\lab3.g:16:8: for_loop
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_for_loop_in_stmt54);
                    for_loop3=for_loop();

                    state._fsp--;

                    adaptor.addChild(root_0, for_loop3.getTree());

                    }
                    break;
                case 2 :
                    // C:\\Users\\zizoa\\Desktop\\Compiler\\Tasks\\lab3.g:17:3: if_stmt
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_if_stmt_in_stmt59);
                    if_stmt4=if_stmt();

                    state._fsp--;

                    adaptor.addChild(root_0, if_stmt4.getTree());

                    }
                    break;
                case 3 :
                    // C:\\Users\\zizoa\\Desktop\\Compiler\\Tasks\\lab3.g:18:3: decl
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_decl_in_stmt65);
                    decl5=decl();

                    state._fsp--;

                    adaptor.addChild(root_0, decl5.getTree());

                    }
                    break;
                case 4 :
                    // C:\\Users\\zizoa\\Desktop\\Compiler\\Tasks\\lab3.g:19:3: while_loop
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_while_loop_in_stmt71);
                    while_loop6=while_loop();

                    state._fsp--;

                    adaptor.addChild(root_0, while_loop6.getTree());

                    }
                    break;
                case 5 :
                    // C:\\Users\\zizoa\\Desktop\\Compiler\\Tasks\\lab3.g:20:3: assigningVariable
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_assigningVariable_in_stmt77);
                    assigningVariable7=assigningVariable();

                    state._fsp--;

                    adaptor.addChild(root_0, assigningVariable7.getTree());

                    }
                    break;
                case 6 :
                    // C:\\Users\\zizoa\\Desktop\\Compiler\\Tasks\\lab3.g:21:3: printings_statements
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_printings_statements_in_stmt82);
                    printings_statements8=printings_statements();

                    state._fsp--;

                    adaptor.addChild(root_0, printings_statements8.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "stmt"


    public static class decl_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "decl"
    // C:\\Users\\zizoa\\Desktop\\Compiler\\Tasks\\lab3.g:38:1: decl : ( declOfInteger ';' | declOfDoubleAndFloat ';' | declOfBool ';' | declOfString ';' | declOfChar ';' | declOfAuto ';' | declOfPointer ';' | declOfObjects ';' | declOfArrays ';' );
    public final lab3Parser.decl_return decl() throws RecognitionException {
        lab3Parser.decl_return retval = new lab3Parser.decl_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token char_literal10=null;
        Token char_literal12=null;
        Token char_literal14=null;
        Token char_literal16=null;
        Token char_literal18=null;
        Token char_literal20=null;
        Token char_literal22=null;
        Token char_literal24=null;
        Token char_literal26=null;
        lab3Parser.declOfInteger_return declOfInteger9 =null;

        lab3Parser.declOfDoubleAndFloat_return declOfDoubleAndFloat11 =null;

        lab3Parser.declOfBool_return declOfBool13 =null;

        lab3Parser.declOfString_return declOfString15 =null;

        lab3Parser.declOfChar_return declOfChar17 =null;

        lab3Parser.declOfAuto_return declOfAuto19 =null;

        lab3Parser.declOfPointer_return declOfPointer21 =null;

        lab3Parser.declOfObjects_return declOfObjects23 =null;

        lab3Parser.declOfArrays_return declOfArrays25 =null;


        Object char_literal10_tree=null;
        Object char_literal12_tree=null;
        Object char_literal14_tree=null;
        Object char_literal16_tree=null;
        Object char_literal18_tree=null;
        Object char_literal20_tree=null;
        Object char_literal22_tree=null;
        Object char_literal24_tree=null;
        Object char_literal26_tree=null;

        try {
            // C:\\Users\\zizoa\\Desktop\\Compiler\\Tasks\\lab3.g:38:6: ( declOfInteger ';' | declOfDoubleAndFloat ';' | declOfBool ';' | declOfString ';' | declOfChar ';' | declOfAuto ';' | declOfPointer ';' | declOfObjects ';' | declOfArrays ';' )
            int alt3=9;
            switch ( input.LA(1) ) {
            case 46:
                {
                switch ( input.LA(2) ) {
                case ID:
                    {
                    alt3=1;
                    }
                    break;
                case 24:
                    {
                    alt3=7;
                    }
                    break;
                case 31:
                    {
                    alt3=9;
                    }
                    break;
                default:
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 1, input);

                    throw nvae;

                }

                }
                break;
            case 40:
            case 43:
                {
                switch ( input.LA(2) ) {
                case ID:
                    {
                    alt3=2;
                    }
                    break;
                case 24:
                    {
                    alt3=7;
                    }
                    break;
                case 31:
                    {
                    alt3=9;
                    }
                    break;
                default:
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 2, input);

                    throw nvae;

                }

                }
                break;
            case 34:
                {
                alt3=3;
                }
                break;
            case 30:
                {
                switch ( input.LA(2) ) {
                case ID:
                    {
                    alt3=4;
                    }
                    break;
                case 24:
                    {
                    alt3=7;
                    }
                    break;
                case 31:
                    {
                    alt3=9;
                    }
                    break;
                default:
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 4, input);

                    throw nvae;

                }

                }
                break;
            case 36:
                {
                switch ( input.LA(2) ) {
                case ID:
                    {
                    alt3=5;
                    }
                    break;
                case 24:
                    {
                    alt3=7;
                    }
                    break;
                case 31:
                    {
                    alt3=9;
                    }
                    break;
                default:
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 5, input);

                    throw nvae;

                }

                }
                break;
            case 33:
                {
                alt3=6;
                }
                break;
            case ID:
                {
                int LA3_7 = input.LA(2);

                if ( (LA3_7==24) ) {
                    alt3=7;
                }
                else if ( (LA3_7==ID) ) {
                    alt3=8;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 7, input);

                    throw nvae;

                }
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }

            switch (alt3) {
                case 1 :
                    // C:\\Users\\zizoa\\Desktop\\Compiler\\Tasks\\lab3.g:38:8: declOfInteger ';'
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_declOfInteger_in_decl105);
                    declOfInteger9=declOfInteger();

                    state._fsp--;

                    adaptor.addChild(root_0, declOfInteger9.getTree());

                    char_literal10=(Token)match(input,27,FOLLOW_27_in_decl107); 
                    char_literal10_tree = 
                    (Object)adaptor.create(char_literal10)
                    ;
                    adaptor.addChild(root_0, char_literal10_tree);


                    }
                    break;
                case 2 :
                    // C:\\Users\\zizoa\\Desktop\\Compiler\\Tasks\\lab3.g:39:3: declOfDoubleAndFloat ';'
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_declOfDoubleAndFloat_in_decl112);
                    declOfDoubleAndFloat11=declOfDoubleAndFloat();

                    state._fsp--;

                    adaptor.addChild(root_0, declOfDoubleAndFloat11.getTree());

                    char_literal12=(Token)match(input,27,FOLLOW_27_in_decl114); 
                    char_literal12_tree = 
                    (Object)adaptor.create(char_literal12)
                    ;
                    adaptor.addChild(root_0, char_literal12_tree);


                    }
                    break;
                case 3 :
                    // C:\\Users\\zizoa\\Desktop\\Compiler\\Tasks\\lab3.g:40:3: declOfBool ';'
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_declOfBool_in_decl119);
                    declOfBool13=declOfBool();

                    state._fsp--;

                    adaptor.addChild(root_0, declOfBool13.getTree());

                    char_literal14=(Token)match(input,27,FOLLOW_27_in_decl121); 
                    char_literal14_tree = 
                    (Object)adaptor.create(char_literal14)
                    ;
                    adaptor.addChild(root_0, char_literal14_tree);


                    }
                    break;
                case 4 :
                    // C:\\Users\\zizoa\\Desktop\\Compiler\\Tasks\\lab3.g:41:3: declOfString ';'
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_declOfString_in_decl126);
                    declOfString15=declOfString();

                    state._fsp--;

                    adaptor.addChild(root_0, declOfString15.getTree());

                    char_literal16=(Token)match(input,27,FOLLOW_27_in_decl128); 
                    char_literal16_tree = 
                    (Object)adaptor.create(char_literal16)
                    ;
                    adaptor.addChild(root_0, char_literal16_tree);


                    }
                    break;
                case 5 :
                    // C:\\Users\\zizoa\\Desktop\\Compiler\\Tasks\\lab3.g:42:3: declOfChar ';'
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_declOfChar_in_decl133);
                    declOfChar17=declOfChar();

                    state._fsp--;

                    adaptor.addChild(root_0, declOfChar17.getTree());

                    char_literal18=(Token)match(input,27,FOLLOW_27_in_decl135); 
                    char_literal18_tree = 
                    (Object)adaptor.create(char_literal18)
                    ;
                    adaptor.addChild(root_0, char_literal18_tree);


                    }
                    break;
                case 6 :
                    // C:\\Users\\zizoa\\Desktop\\Compiler\\Tasks\\lab3.g:43:3: declOfAuto ';'
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_declOfAuto_in_decl140);
                    declOfAuto19=declOfAuto();

                    state._fsp--;

                    adaptor.addChild(root_0, declOfAuto19.getTree());

                    char_literal20=(Token)match(input,27,FOLLOW_27_in_decl142); 
                    char_literal20_tree = 
                    (Object)adaptor.create(char_literal20)
                    ;
                    adaptor.addChild(root_0, char_literal20_tree);


                    }
                    break;
                case 7 :
                    // C:\\Users\\zizoa\\Desktop\\Compiler\\Tasks\\lab3.g:44:3: declOfPointer ';'
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_declOfPointer_in_decl147);
                    declOfPointer21=declOfPointer();

                    state._fsp--;

                    adaptor.addChild(root_0, declOfPointer21.getTree());

                    char_literal22=(Token)match(input,27,FOLLOW_27_in_decl149); 
                    char_literal22_tree = 
                    (Object)adaptor.create(char_literal22)
                    ;
                    adaptor.addChild(root_0, char_literal22_tree);


                    }
                    break;
                case 8 :
                    // C:\\Users\\zizoa\\Desktop\\Compiler\\Tasks\\lab3.g:45:3: declOfObjects ';'
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_declOfObjects_in_decl154);
                    declOfObjects23=declOfObjects();

                    state._fsp--;

                    adaptor.addChild(root_0, declOfObjects23.getTree());

                    char_literal24=(Token)match(input,27,FOLLOW_27_in_decl156); 
                    char_literal24_tree = 
                    (Object)adaptor.create(char_literal24)
                    ;
                    adaptor.addChild(root_0, char_literal24_tree);


                    }
                    break;
                case 9 :
                    // C:\\Users\\zizoa\\Desktop\\Compiler\\Tasks\\lab3.g:46:3: declOfArrays ';'
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_declOfArrays_in_decl161);
                    declOfArrays25=declOfArrays();

                    state._fsp--;

                    adaptor.addChild(root_0, declOfArrays25.getTree());

                    char_literal26=(Token)match(input,27,FOLLOW_27_in_decl163); 
                    char_literal26_tree = 
                    (Object)adaptor.create(char_literal26)
                    ;
                    adaptor.addChild(root_0, char_literal26_tree);


                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "decl"


    public static class declOfBool_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "declOfBool"
    // C:\\Users\\zizoa\\Desktop\\Compiler\\Tasks\\lab3.g:51:1: declOfBool : 'bool' ID ( '=' ( ID | 'true' | 'false' | expression ) )? ( ',' ( ID ( '=' ( ID | 'true' | 'false' | expression ) )? ) )* ;
    public final lab3Parser.declOfBool_return declOfBool() throws RecognitionException {
        lab3Parser.declOfBool_return retval = new lab3Parser.declOfBool_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token string_literal27=null;
        Token ID28=null;
        Token char_literal29=null;
        Token ID30=null;
        Token string_literal31=null;
        Token string_literal32=null;
        Token char_literal34=null;
        Token ID35=null;
        Token char_literal36=null;
        Token ID37=null;
        Token string_literal38=null;
        Token string_literal39=null;
        lab3Parser.expression_return expression33 =null;

        lab3Parser.expression_return expression40 =null;


        Object string_literal27_tree=null;
        Object ID28_tree=null;
        Object char_literal29_tree=null;
        Object ID30_tree=null;
        Object string_literal31_tree=null;
        Object string_literal32_tree=null;
        Object char_literal34_tree=null;
        Object ID35_tree=null;
        Object char_literal36_tree=null;
        Object ID37_tree=null;
        Object string_literal38_tree=null;
        Object string_literal39_tree=null;

        try {
            // C:\\Users\\zizoa\\Desktop\\Compiler\\Tasks\\lab3.g:51:11: ( 'bool' ID ( '=' ( ID | 'true' | 'false' | expression ) )? ( ',' ( ID ( '=' ( ID | 'true' | 'false' | expression ) )? ) )* )
            // C:\\Users\\zizoa\\Desktop\\Compiler\\Tasks\\lab3.g:51:13: 'bool' ID ( '=' ( ID | 'true' | 'false' | expression ) )? ( ',' ( ID ( '=' ( ID | 'true' | 'false' | expression ) )? ) )*
            {
            root_0 = (Object)adaptor.nil();


            string_literal27=(Token)match(input,34,FOLLOW_34_in_declOfBool173); 
            string_literal27_tree = 
            (Object)adaptor.create(string_literal27)
            ;
            adaptor.addChild(root_0, string_literal27_tree);


            ID28=(Token)match(input,ID,FOLLOW_ID_in_declOfBool175); 
            ID28_tree = 
            (Object)adaptor.create(ID28)
            ;
            adaptor.addChild(root_0, ID28_tree);


            // C:\\Users\\zizoa\\Desktop\\Compiler\\Tasks\\lab3.g:51:23: ( '=' ( ID | 'true' | 'false' | expression ) )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==29) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // C:\\Users\\zizoa\\Desktop\\Compiler\\Tasks\\lab3.g:51:24: '=' ( ID | 'true' | 'false' | expression )
                    {
                    char_literal29=(Token)match(input,29,FOLLOW_29_in_declOfBool178); 
                    char_literal29_tree = 
                    (Object)adaptor.create(char_literal29)
                    ;
                    adaptor.addChild(root_0, char_literal29_tree);


                    // C:\\Users\\zizoa\\Desktop\\Compiler\\Tasks\\lab3.g:51:28: ( ID | 'true' | 'false' | expression )
                    int alt4=4;
                    switch ( input.LA(1) ) {
                    case ID:
                        {
                        int LA4_1 = input.LA(2);

                        if ( (LA4_1==ArithmaticOperators) ) {
                            alt4=4;
                        }
                        else if ( ((LA4_1 >= 26 && LA4_1 <= 27)) ) {
                            alt4=1;
                        }
                        else {
                            NoViableAltException nvae =
                                new NoViableAltException("", 4, 1, input);

                            throw nvae;

                        }
                        }
                        break;
                    case 48:
                        {
                        alt4=2;
                        }
                        break;
                    case 42:
                        {
                        alt4=3;
                        }
                        break;
                    case DoubleNum:
                    case IntNum:
                        {
                        alt4=4;
                        }
                        break;
                    default:
                        NoViableAltException nvae =
                            new NoViableAltException("", 4, 0, input);

                        throw nvae;

                    }

                    switch (alt4) {
                        case 1 :
                            // C:\\Users\\zizoa\\Desktop\\Compiler\\Tasks\\lab3.g:51:29: ID
                            {
                            ID30=(Token)match(input,ID,FOLLOW_ID_in_declOfBool181); 
                            ID30_tree = 
                            (Object)adaptor.create(ID30)
                            ;
                            adaptor.addChild(root_0, ID30_tree);


                            }
                            break;
                        case 2 :
                            // C:\\Users\\zizoa\\Desktop\\Compiler\\Tasks\\lab3.g:51:34: 'true'
                            {
                            string_literal31=(Token)match(input,48,FOLLOW_48_in_declOfBool185); 
                            string_literal31_tree = 
                            (Object)adaptor.create(string_literal31)
                            ;
                            adaptor.addChild(root_0, string_literal31_tree);


                            }
                            break;
                        case 3 :
                            // C:\\Users\\zizoa\\Desktop\\Compiler\\Tasks\\lab3.g:51:43: 'false'
                            {
                            string_literal32=(Token)match(input,42,FOLLOW_42_in_declOfBool189); 
                            string_literal32_tree = 
                            (Object)adaptor.create(string_literal32)
                            ;
                            adaptor.addChild(root_0, string_literal32_tree);


                            }
                            break;
                        case 4 :
                            // C:\\Users\\zizoa\\Desktop\\Compiler\\Tasks\\lab3.g:51:53: expression
                            {
                            pushFollow(FOLLOW_expression_in_declOfBool193);
                            expression33=expression();

                            state._fsp--;

                            adaptor.addChild(root_0, expression33.getTree());

                            }
                            break;

                    }


                    }
                    break;

            }


            // C:\\Users\\zizoa\\Desktop\\Compiler\\Tasks\\lab3.g:51:67: ( ',' ( ID ( '=' ( ID | 'true' | 'false' | expression ) )? ) )*
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( (LA8_0==26) ) {
                    alt8=1;
                }


                switch (alt8) {
            	case 1 :
            	    // C:\\Users\\zizoa\\Desktop\\Compiler\\Tasks\\lab3.g:51:68: ',' ( ID ( '=' ( ID | 'true' | 'false' | expression ) )? )
            	    {
            	    char_literal34=(Token)match(input,26,FOLLOW_26_in_declOfBool199); 
            	    char_literal34_tree = 
            	    (Object)adaptor.create(char_literal34)
            	    ;
            	    adaptor.addChild(root_0, char_literal34_tree);

